# Iris

./: .gitignore  Cargo.toml
lana/: Cargo.toml
lana/src/: main.rs  token
lib/client/: Cargo.toml
lib/client/src/: client.rs  events.rs  http.rs  lib.rs
lib/client/src/cache/: mod.rs
lib/client/src/sharding/: heartbeat.rs  mod.rs  shard.rs
lib/structures/: Cargo.toml
lib/structures/src/: flags.rs  gateway.rs  lib.rs  snowflake.rs  user.rs
lib/structures/src/events/: ready.rs
lua_test/: Cargo.toml
lua_test/assets/: hello.lua
